[TIL/book] 읽기 좋은 코드가 좋은 코드다 (~ Part 4. 선택된 주제들)

--- a/book/읽기_좋은_코드가_좋은_코드다.md
+++ b/book/읽기_좋은_코드가_좋은_코드다.md
@@ -803,7 +803,559 @@
 
 ## 14. 테스트와 가독성
 
+- 읽거나 유지보수하기 쉽게 테스트를 만들어라
+    - 다른 프로그래머가 수정하거나 새로운 테스트를 더하는 걸 쉽게 느낄 수 있게 테스트 코드는 읽기 쉬워야 한다.
+    - 테스트 코드가 크고 두렵게 느껴지면..,
+        - 코드를 수정하는 일이 두려워진다.
+            - 아니, 우리는 이 코드에 손대고 싶지 않아. 테스트 케이스를 모두 변경하는 일은 너무나 끔찍하다고!
+        - 새로운 코드를 작성하면 그에 따르는 새로운 테스트를 작성하지 않는다.
+            - 시간이 흐르면서 더 낮은 비율의 코드가 테스트되며, 코드에 대한 확신이 줄어들 수밖에 없다.
+
+- before
+
+    ```java
+    void Test1() {
+        vector<ScoredDocument> docs;
+        docs.resize(5);
+
+        docs[0].url = "http://example.com";
+        docs[0].score = -5.0;
+        docs[1].url = "http://example.com";
+        docs[1].score = 1;
+        docs[2].url = "http://example.com";
+        docs[2].score = 4;
+        docs[3].url = "http://example.com";
+        docs[3].score = -99998.7;
+        docs[4].url = "http://example.com";
+        docs[4].score = 3.0;
+
+        SortAndFilterDocs(&docs);
+
+        assert(docs.size() == 3);
+        assert(docs[0].score == 4);
+        assert(docs[1].score == 3.0);
+        assert(docs[2].score == 1);
+    }
+    ```
+
+    - 잘못된 곳
+        1. 테스트가 너무 길고 중요하지 않은 자세한 내용으로 가득 찼다. 이 테스트가 하는 일을 한 문장으로 표현할 수 있으므로, 실제 테스트 구문이 지나치게 길 이유가 없다.
+        2. 새로운 테스트를 추가하기 쉽지 않다. 복사/붙이기/수정 방법을 쓰고 싶은 유혹을 느끼겠지만, 그렇게하면 코드를 더 길고 중복되게 한다.
+        3. 테스트 실패 메시지가 별로 도움이 되지 않는다. 테스트에 실패하면 단지 Assertion failed: docs.size() == 3 같은 내용을 출력할 것이다. 디버깅에 도움되는 정보를 포함하지 않는다.
+        4. 모든 것을 한꺼번에 테스트하려고 애쓰고 있다. 음수를 필터링하는 기능, 수를 정렬하는 기능을 동시에 테스트하는 것이다. 여러 개의 테스트로 나누면 더 읽기 쉬울 것이다.
+        5. 테스트 입력이 간단치 않다. 특히 -99998.7 같은 입력은 그 값이 특별히 중요한 의미를 갖지 않음에도 불필요하게 시선을 끈다. 더 간단한 음수값을 사용해도 충분하다.
+        6. 테스트 입력값들이 코드를 꼼꼼하게 실행시키지 않는다. 예를 들어 점수가 0인 경우는 다루지 않는다.
+        7. 비어있는 입력 벡터, 매우 큰 벡터 혹은 중복된 점수 같이 비정상적인 값을 가지는 입력을 테스트하지 않는다.
+        8. Test1() 라는 이름은 아무 의미가 없다. 이름은 반드시 테스트되는 함수나 상황을 설명해야 한다.
+- 이 테스트를 더 읽기 쉽게 만들기: 덜 중요한 세부 사항은 숨겨서 더 중요한 내용이 눈에 잘 띄게 해야한다.
+    - 각 테스트의 최상위 수준은 최대한 간결해야 한다. 이상적으로는 각 테스트의 입출력이 한 줄의 코드로 설명될 수 있어야 한다.
+- 읽기 편한 메시지 만들기: 테스트에 실패하면, 버그를 추적해서 수정하는 데 도움될 만한 에러 메시지를 출력해야 한다.
+    - 위에서 `assert(output == expected_output)`가 실패하면 에러 메시지가 출력될 것이다. output 과 expected_output 값이 무엇인지 궁금해 질 것이다.
+
+        ```java
+        Assertion failed: (output == expected_output),
+          function CheckScoresBeforeAfter, file test.cc, line 37.
+        ```
+
+    - 향상된 버전의 assert() 사용하기
+        - assert() 대신 assertEqual() 같은 메소드를 사용하면 더 도움되는 에러 메시지를 출력한다.
+    - 손수 작성한 에러 메시지: 에러 메시지가 최대한 유용하도록 목적에 맞는 assert 를 스스로 구현해도 된다.
+- 좋은 테스트 입력값의 선택: 가능하면 가장 간단한 입력으로 코드를 완전히 검사할 수 있어야 한다.
+    - 입력값을 단순화하기
+        - `CheckScoresBeforeAfter(“-5, 1, 4, -99998.7, 3”, “4, 3, 1”)` 에서 -99998.7 는 ‘시끄러운’ 값이다.
+        - 테스트의 효율성을 전혀 손상시키지 않으면서 입력되는 값들을 단순하게 만들자.
+    - 결과: `CheckScoresBeforeAfter(“1, 2, -1, -3”, “3, 2, 1”)`
+    - 다양한 기능의 테스트: 코드를 구석구석 철저하게 수행하려고 하나의 ‘완벽한’ 입력을 사용하는 것보다는 작은 테스트를 여러 개 사용하는 방식이 더 쉽고 효과적이다.
+    - SortAndFilterDocs()에 대한 4가지 테스트
+
+        ```java
+        CheckScoresBeforeAfter(“2, 1, -3”, “3, 2, 1”); // 기본적인 정렬
+        CheckScoresBeforeAfter(“0, -0.1, -10”, “0”); // 0보다 작은 값을 모두 제거
+        CheckScoresBeforeAfter(“1, -2, 1, 2”, “1, 1”); // 중복은 문제되지 않는다.
+        CheckScoresBeforeAfter(“”, “”); // 빈 입력도 OK
+        ```
+
+- 테스트 함수에 이름 붙이기: 테스트를 상세하게 묘사할 수 있는 이름을 사용하는게 좋다.
+    - 테스트되는 클래스
+    - 테스트되는 함수
+    - 테스트되는 상황이나 버그
+    - 'Test_' 같은 접두사를 이용하여 필요한 정보를 모두 하나로 붙이는 것
+        - `Test_함수이름_상황()`형태를 이용하면 된다.
+        - ex> `void Test_SortAndFilterDocs_BasicSorting()`
+    - 테스트 함수명은 실제 코드베이스에서 호출되는 함수가 아니어서 길어도 된다.
+        - 만약 테스트가 실패하면 함수명을 출력하기 때문에 상황을 잘 묘사하는 이름을 사용하면 도움이 된다.
+- 테스트의 수정이나 추가가 쉬워야 한다.
+
+- 테스트에 친숙한 개발
+    - 테스트하기 어려운 코드의 특징과 이것이 설계와 관련된 문제에 미치는 영향
+
+      ![Untitled51.png](image/theartofreadablecode/Untitled%2051.png)
+
+    - 테스트와 설계가 가지는 좋은 특징
+
+      ![Untitled52.png](image/theartofreadablecode/Untitled%2052.png)
+
+- 지나친 테스트
+    - 테스트를 가능하게 하려고 실제 코드의 가독성을 희생시킨다.
+        - 테스트를 가능하게 하려고 실제 코드에 지저분한 코드를 넣어야 한다면, 뭔가 잘못된 것이다.
+    - 100% 코드 테스트에 집착하는 일
+        - 버그로 인한 비용이 별로 높지 않기 때문에 굳이 테스트할 필요가 없는 사용자 인터페이스나 이상한 에러 케이스를 포함하고 있을지도 모른다.
+    - 사실, 코드를 100% 테스트하는 일은 일어나지 않는다.
+        - 테스트되지 않은 버그가 있을 수도 있고, 테스트되지 않은 기능이 있을 수도 있으며, 요구사항이 달라졌다는 사실을 모르고 있을 수도 있기 때문이다.
+    - 버그가 야기하는 비용이 어느 정도인지에 따라서, 테스트 코드를 작성하는 시간이 의미를 갖는 부분이 있고 그렇지 않은 부분도 있기 마련이다.
+        - 만약 웹사이트의 프로토타입을 만든다면, 테스트 코드 작성은 전혀 의미가 없다.
+        - 우주선이나 의료 장비를 통제하는 프로그램을 작성한다면 아마 테스트 코드에 주된 관심을 쏟아야 할 것이다.
+    - 테스트 코드로 실제 제품 개발이 차질을 빚게 되는 일
+
 
 ## 15. '분/시간 카운터' 를 설계하고 구현하기
 
+- 웹 서버가 1분 동안, 그리고 지난 1시간 동안 얼마나 많은 바이트를 전송했는지 추적해보자.
+
+### 클래스 인터페이스 정의하기
+
 ---
+
+- before
+
+    ```cpp
+    class MinuteHourCounter {
+    	public:
+    		// 카운트를 더한다.
+    		void Count(int num_bytes);
+
+    		// 1분 동안의 카운트를 반환한다.
+    		int MinuteCount();
+
+    		// 1시간 동안의 카운트를 반환한다.
+    		int HourCount();
+    };
+    ```
+
+- 이름을 개선하기
+    - 'get' 단어는 보편적으로 '가벼운 접근자'라는 의미를 내포한다. 그러므로 지금이 괜찮은 메소드 명이다.
+    - Count(): 전체 시간에 대한 카운트의 총합을 반환할 것만 같다. 직관에 위배된다.
+        - 메소드 이름을 '수치적으로 더하라', '데이터 리스트에 더하라' 두 의미의 `void Add()`로 고치자.
+        - num_bytes 이름이 지나치게 특징적이다. 간단하고, 일반적이고, '음수가 아니라는' 사실을 함축하고 있는 `count`로 변경하자.
+- 주석을 개선하기
+    - 첫 번째 주석은 함수명과 완전히 중복이므로, 지우거나 개선되어야 한다.
+        - // 새로운 데이터 포인트를 더한다 (count ≥ 0)
+        - // 다음 1분 동안 MinuteCount()는 +count에 의해서 값이 커진다.
+        - // 다음 1시간 동안 HourCount()는 +count에 의해서 값이 커진다.
+
+        ```cpp
+        // 새로운 데이터 포인트를 더한다 (count ≥ 0)
+        // 다음 1분 동안 MinuteCount()는 +count에 의해서 값이 커진다.
+        // 다음 1시간 동안 HourCount()는 +count에 의해서 값이 커진다.
+        void Count(int num_bytes);
+        ```
+
+    - 2, 3 번째 주석은 현재의 분 반환/시계와 상관없이 60초 동안에 해당하는 카운트 반환 2가지 해석을 나타내는데, 실제 동작하는 방식은 후자이다.
+
+        ```cpp
+        // 지난 60초 동안 누적된 카운트를 반환한다.
+        int MinuteCount();
+
+        // 지난 3600초 동안 누적된 카운트를 반환한다.
+        int HourCount();
+        ```
+
+- 인터페이스
+
+    ```cpp
+    // 지난 1분과 지난 1시간 동안 누적된 카운트를 추적한다.
+    // 예를 들어 최근의 대역폭 사용량을 확인할 수 있다.
+    class MinuteHourCounter {
+    	public:
+    		// 새로운 데이터 포인트를 더한다 (count ≥ 0)
+    		// 다음 1분 동안 MinuteCount()는 +count에 의해서 값이 커진다.
+    		// 다음 1시간 동안 HourCount()는 +count에 의해서 값이 커진다.
+    		void Add(int count);
+
+    		// 지난 60초 동안 누적된 카운트를 반환한다.
+    		int MinuteCount();
+
+    		// 지난 3600초 동안 누적된 카운트를 반환한다.
+    		int HourCount();
+    };
+    ```
+
+### 시도1: 순진한 해결책
+
+---
+
+- 단순한 해결책부터 시작하자. 시간을 담고 있는 '이벤트'의 리스트를 이용하자.
+
+    ```cpp
+    class MinuteHourCounter {
+    	struct Event {
+    		Event(int count, time_t time) : count(count), time(time) {}
+    		int count;
+    		time_t time;
+    	};
+    	list<Event> events;
+
+    	public:
+    		void Add(int count) {
+    			events.push_back(Event(count, time()));
+    		}
+    		..
+    };
+    ```
+
+- 그 다음, 필요에 따라서 가장 최근 이벤트들을 순차적으로 반복한다.
+
+    ```cpp
+    class MinuteHourCounter {
+    		..
+    		int MinuteCount() {
+    			int count = 0;
+    			count time_t now_secs = time();
+    			for (list<Event>::reverse_iterator i = events.rbegin();
+               i != events.rend() && i->time > now_secs - 60; ++i) {
+    				count += i->count;
+    			}
+    			return count;
+    		}
+
+    		int HourCount() {
+    			int count = 0;
+    			count time_t now_secs = time();
+    			for (list<Event>::reverse_iterator i = events.rbegin();
+               i != events.rend() && i->time > now_secs - 3600; ++i) {
+    				count += i->count;
+    			}
+    			return count;
+    		}
+    };
+    ```
+
+    - 이 코드는 이해하기 쉬운가?
+        - 이 솔루션은 '정확'하지만, 가독성 관련 2가지 문제가 있다.
+        1. for 루프가 다소 산만하다. 루프를 읽을 때 대부분의 프로그래머는 속도가 늦춰진다.
+        2. MinuteCount() 와 HourCount() 내용이 거의 똑같다. 중복된 코드가 상대적으로 복잡하기 때문에 코드 공유는 특히 중요한 의미를 갖는다.
+
+- 더 읽기 쉬운 버전
+
+    ```cpp
+    class MinuteHourCounter {
+    	struct Event {
+    		Event(int count, time_t time) : count(count), time(time) {}
+    		int count;
+    		time_t time;
+    	};
+    	list<Event> events;
+
+    	int CountSince(time_t cutoff) {
+    		int count = 0;
+    		for (list<Event>::reverse_iterator rit = events.rbegin();
+             rit != events.read(); ++rit) {
+    			if (rit->time <= cutoff) {
+    				break;
+    			}
+    			count += rit->count;
+    		}
+    		return count;
+    	}
+
+    	public:
+    		void Add(int count) {
+    			events.push_back(Event(count, time()));
+    		}
+
+    		int MinuteCount() {
+    			return CountSince(time() - 60);
+    		}
+
+    		int HourCount() {
+    			return CountSince(time() - 3600);
+    		}
+    };
+    ```
+
+    - CountSince()가 절대값 cutoff 를 파라미터로 받고 있다.
+        - 상대값(60, 3600)도 지장은 없지만, 고정된 값을 받아들이는게 더 쉽다.
+    - 반복자를 i 에서 rit 로 바꾸었다.
+        - 역방향 반복자라는 사실을 강조한다.
+    - `rit->time <= cutoff` 조건을 for 루프에서 꺼내어 별도의 `if`문으로 만들었다.
+        - 전통적인 `for`루프가 더 읽기 쉽기 때문이다.
+- 성능 문제
+    - 이 설계는 성능과 관련된 2가지 심각한 문제가 있다.
+    - 계속해서 늘어나기만 한다.
+        - 이 클래스는 한 번이라도 발생한 이벤트를 모두 보관하기 때문에 메모리 사용량이 끝없이 증가한다. MinuteHourCounter 에서 필요 없는 1시간이 지난 데이터를 자동으로 삭제하는 편이 바람직하다.
+    - MinuteCount(), HourCount() 가 너무 느리다.
+        - CountSince()는 시간 범위에 있는 데이터 포인트 개수가 n일 때 O(n) 만큼 시간을 소모한다.
+        - 초당 100번 Add() 를 호출하는 고성능 서버라면, HourCount()가 호출될 때마다 100만 개가 넘는 데이터 포인트를 처리해야 한다.
+        - MinuteHourCounter 에 별도의 minute_count, hour_count 변수를 두어 Add()가 호출될 때마다 값을 반영하는 방법이 바람직하다.
+
+### 시도2: 컨베이어 벨트 설계
+
+---
+
+- 앞의 두 문제를 모두 해결해주는 설계가 필요하다.
+    1. 필요 없는 데이터를 삭제하라.
+    2. 미리 계산된 minute_count, hour_count 의 총합이 가장 최근에 계산된 값을 담게 하라.
+- 리스트를 마치 컨베이어 벨트처럼, 한쪽 끝에 도착한 새로운 데이터를 총합에 더하고, 데이터가 너무 오래되면(유효시간을 넘기면) 해당 데이터가 한쪽 끝에서 '떨어져 나가고', 우리는 해당 값을 총합에서 빼자.
+- 접근: '2단계' 컨베이어 벨트 설계 방식 선택
+    - 독립적인 리스트 2개를 사용하는 방법
+        - 하나는 지난 1분 동안에 대한 리스트, 다른 하나는 지난 1시간에 대한 리스트
+        - 새로운 이벤트가 도착하면 값을 복사하여 두 리스트에 넣는다.
+
+  → 매우 간단하지만, 모든 이벤트의 복사본을 항상 2번 만들어서 비효율적이다.
+
+    - 이벤트가 일단 하나의(지난 1분 동안에 대한) 리스트에 들어가고, 2번째(지난 1시간에 대한, 하지만 지난 1분 동안에 대한 리스트는 아닌) 리스트에 들어가는 방법이 있다.
+
+- 2단계 컨베이어 벨트를 설계하고 구현하기
+
+    ```cpp
+    class MinuteHourCounter {
+    	struct Event {
+    		Event(int count, time_t time) : count(count), time(time) {}
+    		int count;
+    		time_t time;
+    	};
+    	list<Event> minute_events;
+    	list<Event> hour_events; // minute_events에 들어있지 않은 것들만 담는다.
+    	list minute_count;
+    	list hour_count; // 지난 1분을 포함해서 지난 1시간 동안 발생한 이벤트를 모두 센다.
+
+    	public:
+    		void Add(int count) {
+    			const time_t now_secs = time();
+    			ShiftOldEvents(now_secs);
+
+    			// 분을 위한 리스트에 넣는다(시간을 위한 리스트에 들어가는 것은 나중이다).
+    			minute_events.push_back(Event(count, now_secs));		
+
+    			minute_count += count;
+    			hour_count += count;
+    		}
+
+    		int MinuteCount() {
+    			ShiftOldEvents(time());
+    			return minute_count;
+    		}
+
+    		int HourCount() {
+    			ShiftOldEvents(time());
+    			return hour_count;
+    		}
+    };
+    ```
+
+- ShiftOldEvents() 헬퍼 메소드: 시간이 지나면 이벤트를 '옮겨서' minute_events 에서 hour_events 로 움직이고, 이에 따라 minute_count, hour_count 를 적절히 수정한다.
+
+    ```cpp
+    // 오래된 이벤트를 찾아서 삭제하고, hour_count, minute_count 값을 감소시킨다.
+    void ShiftOldEvents(time_t now_secs) {
+    	const int minute_ago = now_secs - 60;
+    	const int hour_ago = now_secs - 3600;
+
+    	// 1분 이상 지난 이벤트는 minute_events에서 hour_events로 이동시킨다.
+    	// (1시간 이상 지난 이벤트는 두 번째 루프에서 삭제될 것이다.)
+    	while (!minute_events.empty() && minute_events.front().time <= minute_ago) {
+    		hour_events.push_back(minute_events.front());
+
+    		minute_count -= minute_events.front().count;
+    		minute_events.pop_front();
+    	}
+
+    	// 1시간 이상 지난 이벤트는 hour_events로부터 삭제한다.
+    	while (!hour_events.empty() && hour_events.front().time <= hour_ago) {
+    		hour_count -= hour_events.front().count;
+    		hour_events.pop_front();
+    	}
+    }
+    ```
+
+- 문제
+    - 설계가 유연하지 않다.
+        - 지난 24시간에 대한 카운트를 알고 싶다고 하면, 대대적인 수정이 불가피하다.
+    - 이 클래스는 상당히 많은 메모리를 소비한다.
+        - 트래픽이 많은 서버가 Add()를 초당 100번 호출한다고 하면, 지난 1시간 분량의 데이터를 보관하므로 이 코드는 대략 5MB 정도의 메모리를 사용한다.
+        - Add()가 더 자주 호출되면 더 많은 메모리가 소모된다. 호출 횟수에 상관없이 일정량의 메모리를 사용하는 것이 바람직하다.
+
+### 시도3: 시간-바구니 설계
+
+---
+
+- 0.99 초에 이벤트가 발생하면 0으로 내림되는 등, 총합에 포함되지 못하는 경우의 수 버그가 있다.
+- 작은 시간 범위에 들어오는 이벤트를 1초 너비의 각 바구니에 담고 총합을 구하자.
+    - 60초 혹은 60분 마다 바구니 하나를 사용하는데, 더 높은 정확성이 필요하다면 더 큰 메모리 용량을 사용하는 대신 더 많은 바구니를 사용할 수 있다.
+    - 이러한 설계는 고정되고 예측 가능한 메모리 용량을 사용한다.
+
+- 시간-바구니를 설계하고 구현하기
+    - TrailingBucketCounter: 어떤 시간 간격(ex> 지난 1시간 동안)에 대한 카운트를 저장하는 클래스
+    - TrailingBucketCounter 인터페이스
+
+        ```cpp
+        // 지나간 N개의 바구니에 대한 카운트를 보관하는 클래스
+        class TrailingBucketCounter {
+        	public:
+        		// 예: TrailingBucketCounter(30, 60)은 지난 30분에 해당하는 바구니를 처리한다.
+        		TrailingBucketCounter(int num_buckets, int secs_per_bucket**);**
+
+        		void Add(int count, time_t now);
+
+        		// 마지막 num_buckets의 시간에 대한 총 카운트를 반환합니다.
+        		int TrailingBucketCount(time_t now);
+        }
+        ```
+
+        - 현재 시간을 인수로 전달하는 방법의 장점
+            - TrailingBucketCounter 는 '시계가 없는' 클래스일 수 있어 테스트하기 더 쉽고, 버그도 적다.
+            - time() 호출을 모두 MinuteHourCounter 내부로 제한할 수 있다.
+                - 시간에 민감한 시스템에서는 시간을 얻는 함수를 한 곳에 모아두고 호출하는 편이 좋다.
+
+    ```cpp
+    class MinuteHourCounter {
+    	TrailingBucketCounter minute_counts;
+    	TrailingBucketCounter hour_counts;
+
+    	public:
+    		MinuteHourCounter() :
+    			minute_counts(/* num_buckets = */ 60, /* secs_per_bucket = */ 1),
+    			hour_counts(/* num_buckets = */ 60, /* secs_per_bucket = */ 60) {
+    		}
+
+    		void Add(int count) {
+    			time_t now = time();
+    			minute_counts.Add(count, now);
+    			hour_counts.Add(count, now);
+    		}
+
+    		int MinuteCount() {
+    			time_t now = time();
+    			return minute_counts.TrailingBucketCount(now);
+    		}
+
+    		int HourCount() {
+    			ShiftOldEvents(time());
+    			return hour_counts.TrailingBucketCount(now);
+    		}
+    };
+    ```
+
+    - 전보다 훨씬 읽기 쉽고, (정확성을 높이는 대신 더 많은 메모리를 사용하도록 변경하기) 유연하다.
+- ConveyorQueue: 기저에 깔린 카운트와 그들의 총합을 다루는 일을 수행하는 데이터 구조
+    - 인터페이스
+
+        ```cpp
+        // 오래된 데이터가 큐의 한쪽 끝에서 '떨어져 나가는' 최대로 많은 수의 슬롯을 가지고 있는 큐
+        class ConveyorQueue {
+        	ConveyorQueue(int max_items);
+
+        	// 큐의 뒤에 있는 값을 증가시킨다.
+        	void AddToBack(int count);
+
+        	// 큐에 있는 각 값이 'num_shifted'만큼 앞으로 움직인다.
+        	// 이제 항목들은 다시 0으로 초기화된다.
+        	// 가장 오래된 항목들이 제거되므로 항목의 수는 max_items보다 작거나 같다.
+        	void Shift(int num_shifted);
+
+        	// 현재 큐에 있는 모든 항목의 총합을 반환한다.
+        	int TotalSum();
+        }
+        ```
+
+    ```cpp
+    // 지나간 N개의 바구니에 대한 카운트를 보관하는 클래스
+    class TrailingBucketCounter {
+    	ConveyorQueue buckets;
+    	const int secs_per_bucket;
+    	time_t last_update_time; // Update()가 마지막으로 호출된 시간
+
+    	// 얼마나 많은 '바구니 시간'이 지났는지 계산하고 그에 따라서 Shift()를 호출한다.
+    	void Update(time_t now) {
+    		int current_bucket = now / secs_per_bucket;
+    		int last_update_bucket = last_update_time / secs_per_bucket;
+
+    		buckets.Shift(current_bucket - last_update_bucket);
+    		last_update_time = now;
+    	}
+
+    	public:
+    		// 예: TrailingBucketCounter(30, 60)은 지난 30분에 해당하는 바구니를 처리한다.
+    		TrailingBucketCounter(int num_buckets, int secs_per_bucket) :
+    			buckets(num_buckets),
+    			secs_per_bucket(secs_per_bucket) {
+    		}
+
+    		void Add(int count, time_t now) {
+    			Update(now);
+    			buckets.AddToBack(count);
+    		}
+
+    		// 마지막 num_buckets의 시간에 대한 총 카운트를 반환합니다.
+    		int TrailingBucketCount(time_t now) {
+    			Update(now);
+    			return buckets.TotalSum();
+    		}
+    }
+    ```
+
+- ConveyorQueue 구현하기
+
+    ```cpp
+    // 오래된 데이터가 큐의 한쪽 끝에서 '떨어져 나가는' 최대로 많은 수의 슬롯을 가지고 있는 큐
+    class ConveyorQueue {
+    	queue<int> q;
+    	int max_items;
+    	int total_sum; // q에 있는 모든 항목의 총합
+
+    	public:
+    		ConveyorQueue(int max_items) : max_items(max_items), total_sum(0) {
+    		}
+
+    		// 현재 큐에 있는 모든 항목의 총합을 반환한다.
+    		int TotalSum() {
+    			return total_sum;
+    		}
+    	
+    		// 큐에 있는 각 값이 'num_shifted'만큼 앞으로 움직인다.
+    		// 이제 항목들은 다시 0으로 초기화된다.
+    		// 가장 오래된 항목들이 제거되므로 항목의 수는 max_items보다 작거나 같다.
+    		void Shift(int num_shifted) {
+    			// 너무 많은 항목이 움직이면, 그냥 큐가 비도록 만든다.
+    			if (num_shifted >= max_items) {
+    				q = queue<int>(); // 큐 clear
+    				total_sum = 0;
+    				return;
+    			}
+    			// 모든 필요한 0을 큐에 넣는다.
+    			while (num_shifted > 0) {
+    				q.push(0);
+    				num_shifted--;
+    			}
+
+    			// 경계를 벗어난 항목들이 모두 떨어져 나가도록 만든다.
+    			while (q.size() > max_items) {
+    				total_sum -= q.front();
+    				q.pop();
+    			}
+    		}
+
+    		// 큐의 뒤에 있는 값을 증가시킨다.
+    		void AddToBack(int count) {
+    			if (q.empty()) Shift(1); // q가 최소한 1개의 항목을 갖도록 하라.
+    			q.back() += count;
+    			total_sum += count;
+    		}
+    }
+    ```
+
+### 3가지 해결책 비교하기
+
+---
+
+- 초당 100번의 Add()호출 시, 성능 통계수치
+
+  ![Untitled53.png](image/theartofreadablecode/Untitled%2053.png)
+
+- 사용자는 클래스1(MinuteHourCounter) 만 알면 충분하다.
+    - ConveyorQueue: 시스템이 허락하는 한도 내에서 무제한의 크기를 갖는 큐로서 옆으로 한 칸 움직일 수 있으며, 큐 안에 담긴 모든 항목의 총합을 관리한다.
+    - TrailingBucketCounter: 시간의 흐름에 따라서 ConveyorQueue를 옆으로 한 칸 이동시키고, (현재 시간에 가장 가까운 최근) 시간구간의 카운트를 저장한다.
+    - MinuteHourCounter: TrailingBucketCounter 2개를 보관한다. 하나는 1분, 다른 하나는 1시간에 대한 카운트용이다.
+
+
+- [Notion link](https://www.notion.so/f4cac16fc0de4bfd924448f2a7360376)
