[TIL/book] 성공하는 프로그래밍 공부법

--- a/book/성공하는_프로그래밍_공부법.md
+++ b/book/성공하는_프로그래밍_공부법.md
@@ -4,8 +4,6 @@
 
 ## 1. 동의되지 않는 권위에 굴복하지 않기
 
----
-
 - 동의되지 않는 권위에 굴복하지 말고 불합리한 권위에 복종하지 말자.
 
 ### 지식 중심의 공부법이라는 권위에 도전하기
@@ -218,6 +216,494 @@
     - 원래 꿈은 머리가 하얘질 때까지 개발을 계속 하는 것.
     - 어떤 일을 하든 변하지 않는 1가지 중요한 사실: 항상 시간에 쫓기고 인력이 부족하다.
 
+
 # 2장. 의도적 수련과 소프트웨어 장인정신
 
+## 1. 학습은 애자일(기민)하게 해야 한다
+
+- 학습은 기민하게 해야 한다.
+- 직접 만들어보는 작업을 통해 학습하는 것이 프로그래밍 학습이다.
+
+- 애자일 공부법: 대부분의 학습이 작은 목표를 정하고 이를 달성해 나가면서 최종적인 목표에 도달하는 방식
+    - 학습을 한다는 것은 내가 알지 못하는 것을 접하게 되는 것으로 불확실성이 높다. 어떤 것을 배워야 하는지, 유용한지 불분명하기 때문이다.
+    - 실질적인 코딩을 시도해보고 내가 무엇을 모르는지 확인하고 이를 해결하기 위해 학습하고 점진적으로 동작하는 소프트웨어를 만들어보면 된다.
+    - 회고: 되돌아보는 시간을 가지고 개선할 수 있는 방법을 찾는 행위
+        - 학습 회고는 학습한 내용을 살펴보며 잘 익혀지지 않는 부분은 재학습을 실행하고, 또한 학습했던 과정을 살펴보고 공부법도 개선하도록 하는 것이다.
+- 학습의 세분화 구분: 내가 알고 있는 것과 모르고 있는 것 구분이 용이해진다.
+    - 학습할 것
+    - 학습하고 있는 것
+    - 학습이 잘 안되는 것
+
+- 학습 모임을 만들거나 참여하는 것은 지속적인 학습을 수행할 뿐만 아니라 타인의 경험이나 지식을 통해 간접 학습이 가능하고, 언제든지 도움을 받을 수 있는 장점이 있다.
+
+
+## 2. 목표는 마지막 목적지가 아니라 첫걸음 자체가 되어야
+
+- 프로그래밍 학습의 최종 목표는 원하는 소프트웨어를 완성하는 것이다.
+    - 만들어 내는 능력을 익히는 것이 프로그래밍 학습
+        - 단순하게 생각해보면 프로그래밍 언어의 사용법과 프로그래밍에 필요한 기초지식(알고리즘, 통신 프로토콜, 컴퓨터 구조 등)을 자유롭게 사용할 수 있는 것
+    - 실제로 시도해보면서 다양한 지식들을 활용하는 것이 제대로 된 공부법이다.
+
+- 프로그래밍 학습 훈련법(공부법)
+    - 첫번째 단계는 구체적인 목표를 세우는 것이다.
+        - 구체적인 목표 수립하기
+        - 구체적인 목표 세분화하기
+
+- 측정하지 않는 것은 개선할 수 없다.
+    - 정량적 측정 지표
+        - 학습한 서적 페이지 수, 권수, 시간
+        - 직접 작성해 본 프로그램 수
+        - 일일 생산 코드량
+        - 풀어본 코딩 연습 문제 레벨 및 수량
+    - 정성적 측정 지표
+        - 데이터 분석 라이브러리 사용에 대한 자신감
+        - 파이썬 사용에 대한 자신감
+        - 작성해본 프로그램에 대해 설명할 수 있는 자신감
+
+
+## 3. 효과적인 학습 방법은 지식을 꺼내는 인출 작업이 효과적이다
+
+- 20분 정도의 짧은 시간을 정한 후, 책 목차를 보고 읽고싶은 부분을 선정하고 주어진 시간동안 읽는다.
+    - 각자 다른 부분을 읽기 때문에 이후에 읽은 부분에 대하여 공유하는 별도의 시간을 갖는다.
+
+- 어떻게 공부할 것인가
+    - 새로 배운 것을 인출하는 연습
+        - 직접 해보기. 머릿속에 있는 것을 끄집어 내는 행위.
+        - 보고 듣고 이해하는 학습보다 인출하는 행위를 통해서 기억이나 이해는 강화한다.
+        - 간단한 프로그램부터 여유가 된다면 펫 프로젝트를 수행해보자.
+        - 게시판, 일정관리 프로그램, SNS 사이트, 최소 기능의 쇼핑몰 사이트 제작해보기
+            - 회원가입, 로그인, 글쓰기, 수정, 삭제, 검색 등
+    - 시간 간격을 둔 인출 연습
+        - 일정 시간이 지나면 기억이 얼마 안남기 때문에 이미 학습했던 내용을 다시 인출해보는 연습이 필요하다.
+        - 반복적으로 수련하다 보면 개발 툴 사용과 프로젝트 구성 속도가 빨라진다.
+    - 다양한 문제의 유형을 섞어서 공부하기
+        - 다양한 문제 유형을 마주하면서 익숙함을 깨고 새로움에 도전과 노력을 기울여야 한다.
+        - 전혀 다른 문제를 풀어볼 때, 전혀 다른 지식을 인출하려고 할 때 많은 노력이 필요하고 뇌는 보다 강하게 기억하려고 한다.
+    - 새로운 지식을 기존의 지식과 연결하는 정교화
+        - 프로그래밍보다 개념 지식을 익히는 데 유용한 방법이다.
+        - 기존 지식이 갖고있는 기억력을 활용하기 때문에 새로운 지식도 오래 기억할 수 있다.
+        - 더 나아가 다른 사람에게 설명할 수 있을 정도가 되자.
+    - 나름대로 문제를 풀어보고 표현하는 생성
+        - 정답이나 해답을 보기 전에 질문에 답을 해보거나 문제를 풀어보는 시도를 하자.
+        - 그런 시도를 하면서 새로운 지식을 받아들이기 위한 마음이 만들어진다.
+        - 되도록 많은 프로그래밍을 해보는 것이 좋은 학습이다.
+    - 배운 것은 검토하고 스스로 질문해보는 반추
+        - 어떤 부분이 잘 되었는지, 잘 될 수 있었던 것은 무엇인지, 능숙해지려면 무엇을 배워야 하는지 질문을 해보자.
+        - 리팩토링도 일종의 반추이다.
+    - 기억을 붙잡아두는 정신적 도구, 기억술
+        - 그림을 활용하거나 축약해서 기억하는 것.
+    - 무엇을 알고 무엇을 모르는지 알아보는 측정
+        - 내가 알고 있는 것이 무엇이고 모르는 것이 무엇인지 측정을 해야한다.
+        - 자신의 지식 수준을 테스트 하는 방법 하나는 학습한 내용을 정리하고 발표하는 것이다.
+            - 해당 지식을 잘 모르는 사람이 충분히 이해할 수 있도록 설명을 정리해야 하고, 이미 해당 지식을 가지고 있는 사람들에게는 지적받지 않도록 준비해야 하고, 어떤 질문이든 답변 가능하도록 철저히 준비해야 한다.
+        - 시험을 보는 것도 좋다.
+        - 이런 과정을 거치면서 학습의 효과는 점점 높아진다.
+
+
+## 4. 전문가가 되기 위하여 전문가가 필요하다
+
+- 같은 학습을 위해 모인 스터디 그룹을 이용하는 방법이 가장 쉬운 동료로부터 배우는 방법이다.
+
+- 코드 리뷰: 자신이 만든 프로그램을 동료들에게 설명하고 평가와 조언을 받는 방법
+    - 잘못된 부분에 대한 지적을 받을 수도 있으나 더 나은 방법에 대하여 조언을 받을 수도 있다.
+    - 엄청난 학습의 도구가 된다.
+
+- 페어 프로그래밍: 2사람이 하나의 컴퓨터를 활용하여 토론하면서 하나의 프로그램을 만드는 방식
+    - 내비게이터가 프로그래밍의 방향성을 전달하고 드라이버가 수행하는 방식
+    - 그 과정에서 서로 토론을 할 수 있다.
+    - 어려운 문제를 풀 때 사용하면 많은 도움이 된다.
+
+- 몹 프로그래밍: 페어 프로그래밍과 비슷하지만, 하나의 문제를 여러 사람이 풀어나가는 것.
+    - 소수의 사람이 전문성이 있고 여러 사람이 잘 모를 경우 학습을 진행하는 데 도움이 된다.
+    - 전문성 있는 사람은 되도록 질문을 많이 해주는 역할을 하고 배우는 사람들이 문제를 해결할 수 있도록 하면 효과가 있다.
+    - 시간이 많이 걸릴 수 있지만 주어진 문제를 어떻게 해결하는지의 과정을 여러 사람이 학습할 수 있는 좋은 방법이다.
+    - 스터디 그룹에서 사용하면 도움이 된다.
+
+
+## 5. 반드시 되돌아 보는 시간이 필요하다
+
+- 회고는 학습을 떠나서 개인/조직의 성장 등 많은 분야에서 개선하고자 할 경우 유용한 도구이다.
+- 회고에서 중요한 3가지 대표 질문
+    - 우리가 잘 하고 있는 것은 무엇인가?
+    - 우리가 잘 하지 못하는 것은 무엇인가?
+    - 아직도 우리를 괴롭히는 것은 무엇인가?
+
+- 프로그래밍 학습 회고를 혼자 할 경우: 자신이 만든 프로그램을 다시 살펴보는 방식으로 하면 된다.
+
+
+## 6. 학습하려면 회복 탄력성이 필요하다
+
+- 많은 시간을 투자하는 것이 학습에 도움이 될 수 있다.
+- 회복 탄력성: 의식을 집중하는 1만 시간을 사용함에 있어, 집중하는 것 뿐 아니라 집중으로 인하여 소모되는 체력이나 정신력을 빠르게 회복하는 것이 중요하다.
+
+- 긍정적인 마인드: 자신의 도전과 실패에 대하여 멈추지 않고 나아갈 수 있도록 해준다.
+    - 프로그래밍 학습도 장애 극복처럼 꾸준히 노력해야 하는 도전이다.
+    - 학습 과정에서 지치고, 거듭되는 실패에 그만두고 싶은 일들이 생기기도 한다.
+- 성장 마인드셋: 자신의 능력을 얼마든지 발전시킬 수 있다고 믿는 것이다.
+    - IT 흐름 속에서 자신의 전문성을 유지하기 위하여 노력한다는 것은 엄청난 도전이다.
+    - 끊임없이 두뇌의 근육을 만들고 유지하는 노력을 해야한다.
+    - 고정 마인드셋: 시간이 부족해서, 하루 일과로 피곤해서, 집중력이 떨어져서 등의 이유로 학습을 할 수 없다고 생각하는 것.
+        - 할 수 없다는 믿음을 갖는 순간 우리의 뇌는 쉽게 지식들을 잃어버리게 된다.
+    - 성장 마인드셋을 갖추면 일상을 바라보는 관점이 바뀌게 된다.
+    - 아무리 바빠도 작은 틈새 시간을 발견하고 학습을 할 수 있으며 피곤한 일상에서는 피로를 회복할 수 있는 방법을 찾으며,
+    - 비록 하루 10여분 씩 공부 하더라도 아무것도 안한 100일보다, 10분씩 100일 학습하면 1천분이라는 시간을 활용한 결과를 얻을 수 있게 된다.
+
+
+## 7. 소프트웨어 장인이 되도록 하자
+
+- 우리의 근본적, 장기 목표: 소프트웨어 장인이 되는 것
+    - 장인이 되기 위하여 프로그래밍 공부법을 익히고 지속적으로 성장해야 하는데 부족한 시간과 목표, 일정이라는 현실적인 압박으로 인하여 장인으로의 길이 쉽지 않다.
+    - 소프트웨어 장인을 뽑기 위하여 코딩 시험이 있는 기술 면접을 보는 것이다.
+- 프로그래밍 학습은 단기간에 이뤄지는 것이 아니기 때문에 장거리 마라톤을 하듯 자신의 페이스를 조절하자.
+
+### 최신 정보를 유지하는 노력
+
 ---
+
+- 책
+    - 기술 명세 서적
+        - 프로그래밍 학습의 필수 학습 대상
+        - 유효성이 존재하지만 가장 자주 구매하여야 하는 책
+    - 개념 서적
+        - 기술에 대한 개념을 설명하고 있는 책
+        - 본인의 관심에 따라서 개념적인 부분을 깊이있게 파악하고자 할 경우 보는 서적
+    - 행동 지침서
+        - 개발 방법론에 대한 책이나 기술 철학, 조직 관리 등 개발 관리자를 위한 서적
+    - 혁신 서적 (고전)
+        - 필수 서적이 되었으면 하는 프로그래머라면 반드시 읽어야 하는 책
+        - 디자인 패턴, 클린 코더, 리팩토링 등
+        - 어느정도 지식이 쌓인 개발자라면 고전 서적은 필수적으로 읽을 것을 권장한다.
+    - 저자는 책을 사서 읽은 책들도 있으나 그렇지 못한 책들도 많았다.
+- 기술 사이트: 최신 기술에 대한 소식을 전한다.
+    - [인포큐](https://www.infoq.com/) 라는 사이트
+    - 단순하게 제공되는 글을 보는게 아니라 관련 링크를 쫓아가서 깊이있게 학습하는 원칙을 갖자.
+- 다양한 오픈소스를 살펴보자.
+
+### 의도적 수련, 의도적 수련, 의도적 수련
+
+---
+
+- 프로그래밍 학습을 촉진하기 위해서는 의도적 수련을 수행해야 한다.
+    - 주기적으로 반복하는 훈련은 의미없는 훈련일 수 있지만,
+    - 의도적 수련은 집중을 해야하는 점과 성능 향상이라는 특정 목표를 갖고있기 때문에 체계적인 실천법이며 특별한 훈련법이다.
+    - 인간의 뇌는 자연스럽게 반복되는 행동을 습관으로 바꾸는 경향이 있다.
+        - 무의식적으로 반복하게 되고 실제로 훈련이나 연습이 아니고 습관이 된다.
+    - 알고리즘, 직접 어플리케이션 만들어 보는 방법
+
+### 사회적 자본의 활용
+
+---
+
+- 직접 모여서 하는 스터디를 추천한다.
+    - 상호간 학습을 독려하고 의식있게 집중할 수 있는 환경을 만들어주며 공부법에서 유용하다고 알려진 "인출" 작업을 훨씬 가능하게 해준다.
+- 사내 스터디를 만들어 점심/저녁 시간에 학습하는 방법도 있다.
+- 업무를 통해 학습할 수 잇는 기회를 만드는 것도 있다.
+    - 코드 리뷰, 페어 프로그래밍, 몹 프로그래밍
+- 컨퍼런스에서 발표하는 방법
+    - 시간과 노력이 많이 드는 방법
+
+### 반드시 필요한 자기 관리
+
+---
+
+- 위의 방법들을 수행하기 위해서는 자기 관리가 무척 중요하다.
+- 목표를 설정하고 하나씩 수행하면서 시간과 노력을 들여야 하고, 그 과정에서 자신의 시간과 해야 할 업무, 목표 관리 등 많은 노력이 필요하다.
+- 자칫 기술 중심적으로 생각하여 신기술만 고집하는 것은 피하자.
+
+### 가치와 원칙
+
+---
+
+- XP 에서 중요한 요소 3가지
+    - 가치: 소프트웨어 장인으로 기술력도 필요하지만 함께 일, 학습하는 데 필요하다.
+        - 커뮤니케이션
+        - 존중
+        - 용기
+        - 피드백
+        - 단순성
+    - 원칙
+    - 실천방안
+        - 테스트 주도 개발, 리팩토링, 단순한 설계, 짝 프로그래밍
+
+### Interview
+
+---
+
+- 하루 일과
+    - 코딩 → 중식 → 코딩 → 석식 → 코딩 → 잠
+    - 더 늙기 전에 최대한 많은 코딩을 하는 것이 목표. 코딩할 때 모든 스트레스가 날아간다.
+    - 따라서 이런 삶을 산다고 불쌍하게 생각할 필요는 없다.
+- 프로그래밍 공부를 시작하게 만든 강력한 동기
+    - 유행들 중에는 없어지기 어려운 일이 있고, 그 일은 적절한 관심, 나아가 전문적 지식이 필요하다.
+    - 그저 해야할 것 같아서 했고, 이왕 했으면 잘하고 싶었다. 적성에 맞아서 오래할 수 있었다.
+- 혼란스러웠던 시기
+    - 근본적으로 프로그래밍은 마스터 경지가 존재할 수 없고, 혼란스럽지 않으면 멈춰버린 개발자일 뿐이다.
+    - 개발이란 99%의 자책과(곧 오해로 밝혀질) 잠깐의 깨달음.
+- 자신만의 프로그래밍 공부법
+    - 개발은 이론이 아니라 일종의 '기술'. 모든 기술은 끊임없이 수련하는 데에서 발전의 의미를 찾을 수 있다.
+    - 하루 연습을 안하면 내가 알고, 이틀 안하면 평론가가 알고, 3일을 안하면 관객이 안다는 격언
+    - 입이 아니라 코드로 말하는 것, 코딩에 열중하는 것, 그것을 되도록 오래하는 것.
+- 프로그래밍에서 중요한 것 3가지
+    - 호기심, 열정, 친절함
+    - 호기심과 열정은 자기 자신이 세운 목표를 달성하는 데 많은 도움이 된다.
+    - 친절함: 다른 개발자들과 커뮤니케이션은 필수이다.
+- 과거에 이런 공부를 좀 하고 싶다
+    - 무엇을 공부할 것인가? 무엇이 공부하고 싶은가? 보다
+    - 무엇이 하고 싶은가? 내가 멋있다고 생각하는 일은 무엇인가? 를 먼저 생각하고 그것을 실천하는 과정에서 필요한 것을 공부해서 채워가는 것이 진짜 공부인 것 같다.
+
+
+# 3장. 컴퓨터와 사람들과 소통하는 국어 이야기
+
+## 1. 코딩: 소통의 통로
+
+- 컴퓨터와 소통의 본질적인 동기: 문제 해결
+    - 코딩은 소통을 위한 자연스러운 수단이다.
+    - 특성: 순수, 단순, 무식
+    - 한 번 익숙해지면 모든 컴퓨터에 쉽게 익숙해질 수 있다.
+
+### 코딩, 결국 사람들과의 소통
+
+---
+
+- 내가 만든 프로그램이 수천, 몇 십만 명이 사용할 때 느끼는 보람은 이루 말할 수 없다.
+- 다른사람이 작성한 코드를 많이 읽은 사람이 컴퓨터와 더 면밀하게 소통할 수 있는 코드를 작성할 수 있다.
+
+
+## 2. 편지 쓰듯 코드 쓰기
+
+- 코딩: 컴퓨터에게 쓰는 편지
+    - 전세계 인구수보다 더 많이 존재하는 전세계의 컴퓨터와 소통할 수 있다는 사실은 프로그래밍 언어, 코딩을 배우는 일의 큰 원동력이 될 수 있다.
+
+### 컴퓨터의 답장으로 하는 퇴고: 테스팅과 디버깅
+
+---
+
+- 훌륭한 개발자가 되고 싶다면, 코딩을 잘하고 싶다면, 마치 글을 작성하는 작가가 퇴고를 하듯 테스팅과 디버깅을 잘할 수 있어야 한다.
+- 언어를 처음 배우는 사람이라면, 내가 배우는 언어로 작성된 프로그램을 어떻게 테스트하고 디버깅 할 수 있는지, 해당 과정을 지원하는 도구들은 어떤 것들이 있는지 찾아보고 공부해야 한다.
+
+
+## 3. 코딩의 정석: 주석으로 번역하고 편지쓰고 일기 쓰기
+
+- 코딩도 사전과 중요한 문법을 공부한 후 반복적으로 훈련하면 자유롭게 내 생각을 프로그램 코드로 표현할 수 있게 된다.
+    - 코딩 공부의 첫 시작은 다른 사람이 작성한 코드를 공부하면서 번역을 해보고 나의 언어로 프로그램을 이해하는 것에서부터 시작해야 한다.
+    - 그런 후, 반복적인 번역을 통해 배운 새 프로그래밍 어휘와 문법을 바탕으로 내 생각을 잘 전달하는 훈련을 해야 한다.
+    - 주석: 코딩할 때 개발자 본인의 생각을 작성할 수 잇는 방법
+
+### 코딩의 시작: 다른 사람이 작성한 코드 번역하기
+
+---
+
+- 새 언어를 빨리 배우는 가장 빠른 방법: 새 언어로 작성된 글을 사전과 문법 책을 갖고 우리말로 적어보는 것.
+    - 코드의 어휘들과 문법들의 색인이 잘 정리된 사전같은 책이 공부하기에 좋다.
+    - 학습 시간을 줄이기 위해 기본 어휘와 문법을 잘 가르치는 선배 개발자들이나 선생님들을 통해 기초를 배우는 것도 좋은 학습의 시작이 될 수 있다.
+    - 처음에는 모르는 프로그래밍 어휘, 문법이 나와 책을 뒤져보면서 공부해야 하지만, 이런 경험들이 쌓이면 프로그램 코드의 독해가 가능해진다.
+
+### 코딩 편지: 자유롭게 나의 생각을 컴퓨터에게 써보기
+
+---
+
+- 코딩하기 전에 무엇을 코딩할 것인지 주석으로 생각의 실타래를 미리 적어보자.
+- 그 후 주석을 바탕으로 코드를 작성하자.
+
+### 코딩 일기: 주석으로 코딩의 기억 기록하기
+
+---
+
+- 코딩을 잘하더라도, 내가 작성한 방대한 코드의 기억을 기록으로 남기는 것이 필요하다.
+- 무엇이든 정직하게 공부하는 것이 실력 향상에 도움이 된다.
+
+
+## 4. 운문식 코딩 산문식 코딩
+
+### 어려우면 그냥 '소설'을 쓰거나 받아쓰기를 하자
+
+---
+
+- 오류가 나지 않는 범위 내에서 다른 사람이 작성한 코드를 한 문장씩 그대로 받아 적어보자.
+    - 프로그램을 돌려보며 내가 작성한 한 문장의 코드가 무슨 일을 하는지 돌아오는 결과를 보고 계속 이해를 하자.
+    - 코딩 서적에 나온 예제들을 처음부터 끝까지 천천히 받아쓰다 보면, 잘못된 습관들도 발견하게 되고, 프로그램을 실행할 수 없다는 경험도 하면서 정확하게 코드를 작성하는 법을 자연스럽게 익히게 된다.
+
+
+## 5. 코딩의 왕도: 다독, 다작하기
+
+- 실력있는 프로그래머가 되는 방법: 다른 사람의 코딩을 읽고 이해하며, 그것을 바탕으로 다양한 프로그램을 작성해봐야 한다.
+
+### 미괄식 개발자 두괄식 프로그래머
+
+---
+
+- 두괄식 개발: 핵심 기능의 빠른 구현을 통해 프로젝트의 성공 여부와 일정 등을 미리 가늠해볼 수 있다.
+    - 하지만, 급하게 구현하다 보니 최종 완성된 프로그램에 빈틈이 많이 존재할 수 있고, 엄청난 유지 비용으로 돌아올 수 있다.
+- 미괄식 개발: 프로그램의 핵심 기능이 구현되기 까지 많은 시간이 걸릴 수 있다는 위험이 있다.
+    - 하지만, 프로그램을 기초부터 여유를 가지고 탄탄하게 작성할 수 있는 장점이 있다.
+
+- 코딩 학습의 왕도: 시간을 얼마나 투자했느냐가 실력으로 연결된다.
+- 코딩 학습의 몇 가지 중요한 훈련 방향
+    - 양질의 코딩 정보 검색과 이를 위한 영어 활용 능력(다독)
+    - 예제 기반 학습(다독)
+    - API 문서 열공하기(다독)
+    - 작성한 코드 공개하기(다작)
+    - 내가 만든 프로그램 배포하고 광고하기(다작)
+
+### 다독을 위한 공부법
+
+---
+
+- 코딩 편지와 코딩 일기로 기본적 프로그래밍 소양을 쌓았다면, 다독을 통해 전문 개발자로의 훈련이 필요하다.
+
+- 양질의 코딩 정보 검색과 이를 위한 영어 활용 능력
+    - 능숙한 개발자로 계속해서 성장하려면, 최소한 영어로 작성된 온라인 문서들을 잘 이해할 수 있는 기본적인 독해 실력이 반드시 필요하다.
+    - 미괄식 개발자: 만들고 싶은 프로그램이 있으면, 깃헙에서 읽을 만한 비슷한 프로젝트를 찾으면 된다.
+        - 검색 결과 중 내 프로젝트에서 사용할 언어를 선택한 후, 내 프로젝트와 유사한 것들을 찾아 해당 프로젝트를 이해하고 소스코드를 다운받아 찬찬히 읽어보며 공부하면 된다.
+        - 깃헙에서 검색 순위(Best match)가 높은 프로젝트들은 필요한 정보들이 자세히 정리되어 있다.
+    - 두괄식 개발자: [질의/응답 기반의 개발자 사이트](http://stackoverflow.com)가 유용하다.
+        - 반드시 알아야 할 테크닉에 대한 지식이 없을 수 있다. 이 같은 문제를 피하려면, 핵심 기능 구현을 위해 필요한 기술과 지식을 잘 선별해서 찾아야 한다.
+        - stackoverflow.com 에서 사람들이 많이 추천(Vote)한 질문, 답변이 많은 질문을 보면 예제 소스코드와 관련 기술들을 확인해 볼 수 있다.
+- 예제 및 문제 기반 학습
+    - 미괄식 개발자: 예제 기반 학습이 유용하다.
+        - 코딩의 다양한 테크닉들과 사례들을 예제 기반으로 하나씩 공부하는 방식.
+        - 교과서의 내용과 예제를 중심으로 찬찬히 공부하자.
+    - 두괄식 개발자: 문제 기반 학습이 유리하다.
+        - 특정 입력값이 주어졌을 때, 원하는 출력값을 만들어야 하는 문제들을 많이 풀어보면서 코딩을 학습하는 방식.
+        - 교과서의 강의별 연습문제를 중심으로 관련 내용들을 거꾸로 찾아보자.
+- API 문서 열공하기
+
+### 다작을 위한 공부법
+
+---
+
+- 코딩도 많이 해봐야 제대로 된 실력으로 끌어올릴 수 있다.
+- 프로그램 전체 윤곽을 먼저 만들기: 코딩할 때 가장 먼저 해야하는 일은 개요를 잡는 일이다.
+    - 한 점에서 출발하여 컴퓨터가 실행하는 순차를 생각하며 한줄 한줄 코딩해야 한다.
+
+- 작성한 코드 공개하기: 깃헙에 올려 공개하는 습관을 가져보자.
+    - 잔디를 심으며 코딩에 많은 동기부여가 되기도 한다.
+    - 때론 나의 코드를 보고 문제가 있다고 알려주는 사람도 있고, 다른 사람 깃헙에 가서 코드를 보며 공부하기도 하고 문제를 보고(Contribution)해 줄 수도 있다.
+- 내가 만든 프로그램 배포하고 광고하기: 깃헙
+    - 저자는 개발 자체보다는 사람들과 소통하는 시간이 즐거웠고, 내가 할 수 있는 코딩이 누군가의 필요를 채운다는 생각에 코딩에 대한 동기부여가 정말 많이 됐다.
+    - 코딩을 즐겁게 지속하기 위해서는 내가 만드는 프로그램을 왜 만들어야 하고 왜 계속 유지보수 해야 하는지에 대한 확실한 동기가 있어야 한다.
+    - 동기는 내가 만든 프로그램으로 도움을 받는 사용자들이 있을 때 극대화한다.
+
+- 깃헙은 각 프로젝트 저장소 별 Release 메뉴를 제공한다.
+    - 개발자들이 만든 프로그램의 패키지를 버전별로 올릴 수 있도록 지원해주며 버전관리도 체계적으로 할 수 있는 간단한 기능을 제공한다.
+
+### Interview
+
+---
+
+- 자신만의 프로그래밍 공부법
+    - 초창기: 다짜고짜 기술 서적을 많이 사서 읽었다.
+    - 성장기: 최대한 코딩을 많이 해봤다.
+    - 완숙기: 다른 사람 코드를 많이 봤다. 어느정도 삽질로 다져진 상황에서 다른 사람 코드를 보면 옥석이 구분된다.
+    - 호기심이 제일 중요하다. 제일 좋은 방법은 독학.
+    - 혼자 스스로 모든 것을 터득하는 것이 가장 실력을 빨리 쌓을 수 있는 방법이다.
+    - 그 이후에 모르는 문제는 커뮤니티나 스택스킬 같은 곳에서 해답을 찾을 수 있다.
+- 프로그래밍에서 중요한 것 3가지
+    - 프로그래밍 기술보다는 마인드(패배의식, 자만심, 오만함)가 중요하다.
+        - 패배의식: 내가 남들보다 뒤쳐졌다는 데에서 더 열심히 공부해야겠다는 의욕을 불태우게 만든다.
+        - 자만심: 공부하다 지쳤을 때 지금까지 본인이 쌓아 올린 기술력과 업적으로 자존감을 키울 때 필요하다.
+        - 오만함: 내가 남들보다 앞섰기 때문에 발휘할 수 있는 영향력, 주변의 누군가에게 패배 의식을 심을 때 필요하다.
+    - 도전 정신, 끈기, 창의성
+    - 개발을 빨리 하는 사람이 잘하는 사람이 아니라 끝까지 살아남는 사람이 잘하는 사람이다.
+- 닮고 싶은 프로그래머? 그 이유는?
+    - 개발 초년에 만난 어린 팀장님. 알고있는 것도 많고 개발 지식이 출중했다.
+    - 개발자로 살아오는 내내 그정도 수준에 도달해야 한다는 생각으로 더 열심히 살아왔던 것 같다.
+    - 알게 모르게 재야에는 그런 말도 안되는 수준의 고수들이 있다. 언제 어디서든 긴장의 끈을 놓지 말자.
+- 프로그래머라서 행복할 때
+    - 사람들이 겪는 불편함이나 문제를 해결해서 그들이 만족하는 모습을 볼 때 행복하다.
+    - 내가 좋아하는 일을 직업으로 갖고있다는 것.
+- 기타
+    - 열정과 패기만 있으면 못할 것이 없다.
+
+
+# 4장. 교양 있는 당신을 위한 프로그래밍 공부법
+
+## 1. 프로그래밍이 필수 교양이라고 말하는 시대
+
+## 2. 교양으로써의 프로그래밍 공부의 위치
+
+- 컴퓨터의 바탕은 계산기 임을 잊지 말자.
+- 추상적인 아키텍처 디자인을 글로써만 배울 수는 없다.
+- 반드시 하나의 프로그래밍 언어를 정해서 코딩을 해봄으로써 컴퓨터가 외부에서 데이터를 어떤 방식으로 받아오는지, 내부적으로는 어떻게 논리구조를 조직해야 내가 원하는대로 일하게 만들 수 있는지, 생산된 정보를 효과적으로 사용자에게 전달할 수 있는 출력 방식은 어떤 것이 있는지 원리를 이해해야 한다.
+
+## 3. 무엇을 배울 것인가
+
+## 4. 어떻게 배울 것인가
+
+### 시나리오로 시작하라
+
+---
+
+- 어떻게 하면 프로그래밍을 잘할 수 있을까? → 동기 유발 부분이 중요하다.
+- 첫번째 공부법: 프로그래밍 예제들을 공부할 때 가장 본인의 상황과 유사한 스토리를 만들어 볼 것을 권유한다.
+
+### 설계에 공을 들여라
+
+---
+
+- 두번째 공부법: 설계에 시간을 들여라.
+- 설계 시 고려할 4가지 측면
+    1. 입력 데이터
+        - 이 프로그램을 구동하기 위해 필요한 데이터는 무엇이며 어떻게 확보할 것인지, 어디에 저장해두고 어떻게 프로그램으로 받아올 것인지에 대한 계획이 있어야 한다.
+        - 변화하는 환경에 유연하게 대응할 수 있도록 데이터 입출력 부분은 별도 클래스로 관리한다.
+    2. 프로그램 작동 시퀀스 설계
+        - 프로그램 내부의 절차적 실행 알고리즘 부분
+        - 받아온 데이터를 이용하여 연산을 수행하여 가공된 결과물을 만들어내는 전 과정을 순서대로 적어보는 것.
+    3. 외부 시스템 혹은 사용자와의 상호작용 부분에 대한 정의
+        - 외부에서 발생하는 이벤트는 아무때나 프로그램의 절차적 실행 중간에 끼어들어 새로운 시퀀스를 만든다.
+        - 계획된 이벤트와 예측하지 못한 예외상황을 구분하여 어떻게 대응할지 설계한다.
+    4. 출력 형태를 정해야 한다.
+
+### 에러가 나는 코드를 분석하라
+
+---
+
+- 세번째 공부법: 잘 작동하는 코드보다 에러가 나는 코드를 분석하라.
+    - 본인이 작성한 코드에서 에러가 생긴다면 이 때가 컴퓨터 프로그램이 작동하는 일반적인 패턴을 배울 수 있는 가장 좋은 기회다.
+
+- 본인이 프로그래밍한 코드를 리뷰하고 디버깅하는 데 유용한 방법: 평소에 소스코드에 꼼꼼하게 코멘트를 다는 습관을 들이자.
+
+### 컴퓨터 하드웨어 구조를 익혀라
+
+---
+
+- 네번째 공부법: 기본적인 컴퓨터 하드웨어 구조를 공부하라.
+    - 변수: 메모리의 어떤 영역을 주소값 대신 프로그래머가 정한 이름으로 참조할 수 있도록 정의된 개념
+        - 함수의 매개변수 전달에서 값에 의한 전달(call by value)과 참조에 의한 전달(call by reference)을 더 명확히 구분할 수 있다.
+    - CPU 가 메모리에 있는 데이터에 접근하는 것에 비해 하드디스크에 저장된 내용을 읽어오는 것이 얼마나 느리며 시간이 걸리는지를 이해한다면,
+        - 프로그램에서 파일 I/O 를 왜 최소화해야 하는지 자연스럽게 알 수 있다.
+- 소프트웨어는 하드웨어라는 물리적 공간에서 실행되는 것
+    - 하드웨어의 성능에 영향을 받을 수 밖에 없다.
+    - 프로그램에서 복잡하다고 여겨지던 개념들이 사실 하드웨어를 좀더 효율적으로 다루기 위한 것
+    - 하드웨어 구조를 이해하는 것이 프로그래밍 실력 향상에 도움이 될 수 있다.
+
+### 문법 외에 외부 라이브러리와 API 활용법을 적극적으로 배운다
+
+---
+
+- 프로그래밍의 진짜 능력은 협업에 있다.
+
+### 좋은 툴을 사용하라
+
+---
+
+- 각 프로그래밍 언어마다 그 언어에 가장 최적화한, 사람들이 가장 많이 쓰는 개발 도구가 있게 마련이다.
+
+### Interview
+
+---
+
+- 혼란스러웠던 시기
+    - 잠깐씩 멈추기는 했지만, 끝까지 포기하지 않고 공부하면 이해를 하게 된다.
+- 자신만의 프로그래밍 공부법
+    - 삽질을 마음대로 할 수 있는 환경이야말로 주니어에게 최고이다.
+    - 필요한 공부가 있다면 일단 관련된 정보를 모은 후 읽기 시작한다.
+    - 중요 키워드가 있으면 구글 킵(keep) 같은 곳에 적어놓는다.
+    - 어느정도 관련된 내용을 읽고 이해가 가면, 깃헙에 관련 오픈 소스를 찾아본다 → 코드를 살펴본다 → 코드도 대충 이해가 가면, 해당 기술을 이용해서 만들고 싶은 프로그램을 노트에 설계한 후 예제 코드를 작성한다.
+- 프로그래밍에서 중요한 것 3가지
+    - 배우려는 의지, 실력에 대한 욕심, 새로운 기술에 대한 호기심
+- 프로그래머라서 행복할 때
+    - 버그없이 잘 만들어져서 누군가에게 서비스 될 때
+
+
+- [Notion link](https://www.notion.so/30d85a7b9da04f529926a4636257f9bb)
