[TIL/book] 죽을 때까지 코딩하며 사는 법 (~ 3장. 바람을 사랑하는 법)

--- a/book/죽을_때까지_코딩하며_사는_법.md
+++ b/book/죽을_때까지_코딩하며_사는_법.md
@@ -178,3 +178,278 @@
 - 결국, 개발자가 일하는 환경 자체가 바뀌는 일이 일어나야 가능합니다.
 - 개발자로서 열정이 식고 생명력을 다하고, 결국은 다른 일을 선택하게 되는 상황을 막기 위해서는 환경 자체가 바뀌어야 한다는 생각이 간절했습니다.
 - 2020년 코로나19 때문에, 우리 모두는 '강제' 재택근무를 경험하게 됩니다.
+
+
+# 2장. 단절의 시대
+
+## 1. 인간의 수명
+
+### 산업혁명, 단절의 시대
+
+---
+
+
+## 2. 살려는 드릴게
+
+### 야근, 은퇴
+
+---
+
+
+## 3. 관점 바꾸기
+
+### 95개조 반박문, 자율주행차, 라디오 가수
+
+---
+
+- 어떤 기술의 변화가 우리에게 근본적으로 어떤 영향을 미치게 될지를 정확히 이해하는 관점, 이것이야말로 우리에게 필요한 통찰이다.
+
+
+## 4. 그건 도둑질이야!
+
+### 절도 행위, 진짜 도둑질, 외계인과의 조우, 서비스를 파는 시대, 엔진 바꾸기
+
+---
+
+
+## 5. 재택근무
+
+### 코로나19, 미래 예측
+
+---
+
+### 첫째, 개발자 연령 상한이 없어지게 될 겁니다
+
+---
+
+- 나이 제한이 사라질 수도 있다.
+  - 대면해서 일을 지시해야 하는 입장에서는 자기보다 연장자일 경우 좀 어려운 부분이 있다.
+  - 팀원을 영입할 때도 협업을 위해서 서로 비슷한 연령을 찾는다.
+  - 만약 전업 재택으로 가게 된다면, 이런 부분은 선호사항일 수 없게 된다.
+
+### 둘째, 개발자 수요가 더 늘어날 겁니다
+
+---
+
+- 4차 산업 쪽으로 투자한다면 코딩을 하는 사람이 더 많이 필요하게 된다.
+  - 분위기가 바뀔 때 가장 안정적인 투자는 개발자를 더 뽑는 것이다.
+
+### 셋째, 개인 사업의 기회도 점차 늘어갈 겁니다
+
+---
+
+- 재택근무 일반화는 재택 근무자 뿐 아니라 재택 프리랜서 기회도 늘릴 것이고 1인 기업에게 외주를 맡기는 현상도 늘어날 것이다.
+- 클라우드 펀딩 같이 개인의 아이디어를 사업화 할 수 있는 기회도 많아질 것이다.
+
+### 넷째, 소프트웨어 산업의 볼륨은 더 커질 겁니다
+
+---
+
+- 소프트웨어 산업의 볼륨이 커지는 만큼 개발자의 수급이 모자라다면, 재택으로라도 일하는 개발자를 찾을 수밖에 없다.
+
+### 미래 계획
+
+---
+
+- 이제 우리는 '죽을 때까지 코딩하기' 가 실현 가능하다고 보고, 미래를 계획해야 한다.
+
+### 요약
+
+---
+
+- 1970년대 평균 수명 60세를 넘어서면서, '단절'된 사회 변화가 일어났다면, 이제 평균 수명 100세가 될 때, 그리고 인공지능과 4차 산업을 통해서, 인간의 지능도 기계가 흉내내는 사회가 도래할 때, 또 다른 '단절'된 변화가 일어날 것은 자명합니다.
+- 우리는 어떻게 살아가게 될까요? 이 사건에서 우리가 취해야 할 것은 근본적인 문제를 이해하면, 변화를 꾀할 수 있다는 겁니다. 이것이 아마 통찰력 아닐까 싶은데요.
+- 관점을 바꾸고, '자율주행시스템' 을 보면, '액세서리' 였던 '자율주행시스템' 이 '인류적 미션' 으로 바뀌게 됩니다. 우리에게 필요한 통찰이 이런 것 아닐까 싶군요.
+- 어떤 기술의 변화가 우리에게 근본적으로 어떤 영향을 미치게 될지를 정확하게 이해하는 관점, 이것이야 말로 우리에게 필요한 통찰인 셈입니다.
+- 이제, 빌 게이츠의 '금 긋기' 를 다시 생각해봐야 합니다. 그가 코드 공유 문화를 막아섰던 이유는 '코드' 자체가 돈이 되는 패키지 소프트웨어 시장이 열리고 있었기 때문입니다. 그런데 현재, 패키지 소프트웨어 시대가 끝나고 서비스 소프트웨어 시대가 되었습니다.
+- 마찬가지로, 회사 내에서만 코딩을 해야 한다는 고정관념은 코드 자체가 돈이 되는 패키지 소프트웨어 시대와 함께 막을 내려야 했습니다. 그러나 역시 분위기는 쉽사리 바뀌지 않았네요. 패러다임이 변하기 위해서는 한 세대가 지나는 것 같이, 강제적인 사건이 필요했습니다. 그런데, 엉뚱하게도 코로나19가 그걸 했습니다.
+- 우리는 '강제 재택근무' 를 경험하게 된 겁니다.
+- 코딩으로 잔뼈가 굵은 사람은 치킨집을 기웃거리기보다, '죽을 때까지 코딩' 하며 사는 것이 맞습니다. 우리는 코딩 속에서 열정과 행복을 경험해보았기 때문입니다.
+
+
+# 3장. 바람을 사랑하는 법
+
+## 1. 바람
+
+### 블랙스완
+
+---
+
+- 과거의 경험을 기준으로 미래의 행동을 결정하면, '극단' 의 상황에서 위기를 맞게 된다.
+- '블랙스완' 은 보편적이라고 볼 만한 현상이다.
+
+### 보편적으로 망하는 회사들
+
+---
+
+- 블랙스완은 기업에 위기를 초래하는 사건이다.
+- 안티프래질: '블랙스완' 을 극복하는 속성.
+
+### 바람을 사랑하는 법
+
+---
+
+- 바람은 촛불 하나는 꺼뜨리지만 모닥불은 살린다.
+  - 바람은 블랙스완을 나타낸다.
+  - 블랙스완이 다가올 때, 블랙스완을 대비하지 못한 기업은 망하고, 블랙스완을 대비한 기업은 크게 일어나게 된다.
+- '죽을 때까지 코딩하기' 는 결국 우리가 모닥불 개발자가 되어 끝까지 살아남아야 가능한 이야기다.
+
+
+## 2. 촛불 개발자
+
+### 개구리의 삶
+
+---
+
+- 촛불 개발자들은 본인들이 모르는 것은 세상에 존재하지 않는 것으로 여기는 특징이 있다.
+  - 촛불은 우물 안 개구리이다.
+  - 본인이 아는 범위 속에서만 세상을 바라보게 된다.
+- 그러나 블랙스완은 항상 우리 지식의 밖에서 발생한다.
+
+→ 촛불 개발자들은 블랙스완에 대처할 수 없다.
+
+- '미지의 것이 존재하지 않는다고 생각': 인간의 보편적 속성
+  - 인간이 가진 '확증편향' 은 스스로 가지고 있는 생각은 끝까지 옳다고 여기고, 이를 보증할 만한 증거만 선별 수집하기 때문에, 인간을 우물 안 개구리로 만들어 간다.
+- 본인의 지식을 끊임없이 의심하며, 우물 밖으로 나갈 방법을 찾아보자.
+
+### 산골 나무꾼
+
+---
+
+- 촛불 개발자는 배우려 하지 않는다.
+
+### 남대문 문지방
+
+---
+
+- 촛불 개발자들은 지식보다는 경험을 중요하게 여긴다.
+
+### 칠면조 이야기
+
+---
+
+- 촛불 개발자들은 개발자 아닌 삶으로 내몰리는 환경에 처해있다.
+- 블랙스완이 오기 전에 자리를 박차고 우물 밖으로 나와야 하고, 뭔가 다른걸 배워야 한다.
+- 자기 경험이 들려주는 소리에 속지 말고, 다양한 경로로 지식을 끌어모아야 한다.
+
+
+## 3. 촛불 기업
+
+### 자율성과 회사 이익
+
+---
+
+- 사람을 부품 취급하고, 개인의 인생을 땔감으로 써야, 회사 시스템이 가려는 방향으로 전진해 나가는걸까?
+- 직원의 자율성을 배제하고 관리자가 지정하는 방향대로 직원이 부품처럼 움직이면, 정말 회사가 잘되는걸까?
+
+→
+
+- '권한'을 가진 느낌을 갖는 것만으로도 '퍼즐을 푸는 속도가 5배 증가'하였다.
+- 사람들이 근무 조건을 스스로 결정할 수 있기만 해도, 성과에 실질적 차이가 생긴다.
+
+→ 회사가 이윤 추구에 방해되는 쪽으로 정책을 만들어가는 원인에는 합리적인 경영진의 판단을 마비시키는 뭔가 중대한 영향력이 있다고 봐야 한다.
+
+### 테일러의 유령
+
+---
+
+- 테일러의 동기부여 방식: 당근과 채찍
+  - 일을 열심히 하면 인센티브를 주고 그렇지 않으면 벌을 준다.
+
+→ 하지만 사람과 말은 다르다.
+
+### 테일러주의 문제점
+
+---
+
+- 테일러가 생각한 노동자: 무감각한 사람, 누군가의 제어가 필요한 동물
+
+- 문제점
+  - 자신을 동물로 취급하는 사람을 신뢰하는 사람은 없을 것이다.
+  - 이런 조직은 신뢰를 바탕으로 운영되지 않는다.
+  - 변화에 취약하다.
+  - 의사결정 과정도 복잡해진다. 조직구조를 피라미드 식으로 만들어 놔서, 결정의 중요도에 따라 더 높이 올라가서 의사결정을 해야 한다.
+
+### 테스토스테론
+
+---
+
+- 권투 선수가 승리를 얻게 되면, 테스토스테론의 수치가 상승한다.
+
+→ 그러면 덜 불안해지고, 더 공격적으로 바뀌며, 고통을 견딜 수 있는 임계점도 높아져서 다음 승리도 거머쥘 수 있게 된다.
+
+- 테스토스테론은
+  - 중독성이 있기 때문에, 승리와 권력은 욕망처럼 영향을 미치게 된다.
+  - 권력을 추구하고 승리를 추구하게 된다.
+  - 조직 내에 권력을 가진 사람들은 더 높은 권력을 얻기 위해서 애쓰게 되고, 상대방을 넘어뜨리고 승리하려 든다.
+  - 평범한 사람들에게 권력을 가지고 있다는 느낌을 불어넣으면 이 사람들은 다른 사람들을 사람이 아닌 사물로 바라보기 시작한다.
+    - 시스템의 부품으로 여기게 만든다.
+  - 그대로 내버려 두면 조직 내에서 지속적인 상승작용이 발생할 것이다.
+
+### 어둠의 인간 유형
+
+---
+
+- 어둠의 인간 유형: 원래 테일러 조직구조를 선호하는 성향을 가진 사람
+  - 선천적으로 타인을 사물로 사용하는 성향을 가진 사람들
+  - '거울신경세포' 영향을 덜 받아 타인의 고통을 느끼지 못하게 되고, 따라서 사람을 사물로 이용할 수 있다.
+  - 이런 성향의 관리자는 테일러 조직에서 인정받기 쉽다.
+
+### 썩은 사과
+
+---
+
+- 썩은 사과: 존재 자체가 블랙스완
+  - 무례한 행동이나 말을 하는 사람
+  - 상대방에게 인격적 모독도 서슴지 않는다.
+  - 자기의 언행으로 상대방을 무기력하게 만드는 것이다.
+  - 썩은 사과의 활동이 오래 지속되면, 다른 썩은 사과를 양산해내기 시작한다.
+  - 특히 어둠의 인간 유형들은 썩은 사과를 따라하기 충분한 자질을 지녔으니까 바로 또 다른 썩은 사과가 된다.
+  - 자기  일(통제)을 잘하는 능력있는 관리자이고 승승장구 해서 부러운 사람일 수 있다.
+
+→ 재능 있는 사람들은 회사를 떠난다. 썩은 사과 관리자가 오래 있을수록 그 회사는 망한다.
+
+- 스트레스: 면역체계를 마비시키고, 뇌를 쪼그라들게 한다.
+  - 스트레스를 받은 사람은 일을 할 수 없다.
+  - 기계적 반응만 할 뿐이고, 이직할 연구만 한다.
+
+
+## 4. 촛불을 피하는 법
+
+- 촛불 개발자가 되지 않으려면, 본인이 어떤 산업에 종사하고 있는지 잊지 않아야 한다.
+
+→ '지식산업' 에 '지식노동자' 로 근무하고 있다.
+
+- 지속적으로 공부하고 지식을 업데이트해야 한다.
+  - 경험을 지식보다 우위에 놓는 상황이 벌어진다면, 긴장할 필요가 있다.
+  - 잘못 쓸려갔다간, 함께 촛불 파티에 참여할 수도 있게 된다.
+
+- 만약 테일러주의 기업에 있다면, 냉정해야 한다. 그 기업이 살아남는 원인은 '운' 외에는 없다.
+  - 시장 상황이 어쩌고 저쩌고 다 필요 없다.
+  - 어차피 '블랙스완' 은 찾아온다.
+  - 회사의 사정을 염려해서 개인의 희생을 담보할 필요가 없다.
+
+- 주변에 '썩은 사과' 가 있다면 지체하지 말고 되도록 빨리 탈출해야 한다 → 시간낭비, 체력 낭비
+- 우리가 코딩에 대해 가진 열정을 빼앗기만 한다.
+
+### 요약
+
+---
+
+- '블랙스완' 은 특별한 지역이나 위치에 있는 사람들만 빠지는 함정이 아닙니다. 오히려 보편적이라고 할 만한 현상입니다.
+- 바람이 불 때 촛불은 꺼지고, 모닥불은 타오르듯이, 블랙스완이 다가올 때, 블랙스완을 대비하지 못한 기업은 망하고, 블랙스완을 대비한 기업은 크게 일어나게 됩니다.
+- '죽을 때까지 코딩하기' 는 결국 우리가 모닥불 개발자가 되어 끝까지 살아남아야 가능한 이야기입니다. 그리고 40년 후 우리가 살아남아서 코딩을 하고 있다면, 직간접적으로, 그때까지 살아남아 있는 모닥불 기업의 영향을 받게 되겠죠.
+- 블랙스완은 항상 우리 지식의 밖에서 발생합니다. 따라서, 촛불 개발자들은 블랙스완에 대처할 수 없는 겁니다.
+- "도끼로 어떤 나무든 다 자를 수 있어 그런데 왜 전기톱이 필요하지?" 라고 말할 수도 있습니다(C 언어로 다 되는데 왜 C++를 배우려고 하지?). 촛불 개발자는 배우려 하지 않기 때문입니다.
+- 촛불 개발자는 '지식' 보다는 '경험' 을 중요하게 여깁니다. 아무리 소프트웨어 공학 분야의 석학이 한 말이라도 그들의 판단 기준에서 우위를 차지하지 못합니다. 새로운 이슈가 생기면, 책을 찾아보는 것보다 먼저 회의를 소집합니다.
+- 단순 작업에 해당하는 티셔츠 생산에서도 결과가 달라진다면, 복잡한 사고를 요구하는 프로그래밍 같은 일에서 자율성은 어떤 영향을 미치게 될까요?
+- 다니엘 핑크는 테일러의 동기부여 방식을 '당근' 과 '채찍' 이라고 했습니다. 일을 열심히 하면 인센티브를 주고 그렇지 않으면 벌을 줬기 때문이죠. 하지만 사람과 (마차 끄는) 말은 다릅니다.
+- 테스토스테론은 중독성이 있기 때문에, '승리' 와 '권력' 은 욕망처럼 영향을 미치게 됩니다. 권력을 추구하고 승리를 추구하게 되는 거죠.
+- 테스토스테론이 주는 권력욕, 그리고 다른 사람을 사물로 보게 하는 성질은 권력을 가지고 통제하는 걸 잘하게 해줄겁니다.
+- '어둠의 인간 유형' 들은 그냥 원래 자기 성향이 그렇기 때문에, 테일러주의 조직이 아주 편안하게 느껴질 겁니다.
+- 벤처 기업이 성장해가면서 100명 정도 선을 지나는 시점에 회사가 삭막해지는걸 느끼게 되는 경우가 있습니다.
+- 스트레스를 받은 사람은 일을 할 수 없어요. 그냥 기계적 반응만 할 뿐이고, 이직할 연구만 하겠죠.
+- 주변에 '썩은 사과' 가 있다면 지체하지 말고 되도록 빨리 탈출하기 바랍니다.
+
+
+# 4장. 모닥불 개발자
